# ai-agent-suite

ai-agent-suite/: README.md
ai-agent-suite/adalchemy/: README.md  execution flowchart.txt  pyproject.toml  report.md  result.md  taxonomy.csv
ai-agent-suite/adalchemy/knowledge/: audience_taxonomy.json  content_taxonomy.json
ai-agent-suite/adalchemy/src/adalchemy/: crew.py  main.py
ai-agent-suite/adalchemy/src/adalchemy/config/: agents.yaml  tasks.yaml
ai-agent-suite/adalchemy/src/adalchemy/tools/: custom_tool.py
ai-agent-suite/adalchemy_nl2sql/: .env.example  Ad Product Taxonomy 2.0.tsv  Architecture  Audience Taxonomy 1.1.tsv  Content Taxonomy 3.1.tsv  Project Structure.txt  README.md  pyproject.toml  result.md  temp_content.tsv
ai-agent-suite/adalchemy_nl2sql/knowledge/: taxonomy.db  taxonomy_metadata.pkl
ai-agent-suite/adalchemy_nl2sql/src/adalchemy_nl2sql/: crew.py  main.py
ai-agent-suite/adalchemy_nl2sql/src/adalchemy_nl2sql/config/: agents.yaml  tasks.yaml
ai-agent-suite/adalchemy_nl2sql/src/adalchemy_nl2sql/tools/: custom_tool.py  semantic_expansion.py
ai-agent-suite/adalchemy_v2/: Ad Product Taxonomy 2.0.tsv  CTV Genre Mapping.tsv  Content Taxonomy 3.1.tsv  Podcast Genre Mapping.tsv  pyproject.toml  report.md
ai-agent-suite/adalchemy_v2/knowledge/: adproduct_segment.py  audience_segment.py  content_segment.py  podcast_segment.py
ai-agent-suite/adalchemy_v2/src/adalchemy_v2/: crew.py  main.py  streamlit_app.py  website_list.txt
ai-agent-suite/adalchemy_v2/src/adalchemy_v2/config/: agents.yaml  tasks.yaml
ai-agent-suite/adalchemy_v2/src/adalchemy_v2/tools/: custom_tool.py
ai-agent-suite/customer-support-bot/: README.md  chat_response.md  pyproject.toml
ai-agent-suite/customer-support-bot/src/customer_support_bot/: crew.py  main.py
ai-agent-suite/customer-support-bot/src/customer_support_bot/config/: agents.yaml  tasks.yaml
ai-agent-suite/publisher/: .env.example  README.md  pyproject-old.toml  pyproject.toml  summaries.md
ai-agent-suite/publisher/src/publisher/: crew.py  main.py
ai-agent-suite/publisher/src/publisher/config/: agents.yaml  tasks.yaml
