[project]
name = "adalchemy"
version = "0.1.0"
description = "AdAlchemy using crewAI"
authors = [{ name = "Arjun Sarihyan", email = "arjunsarihyan@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==0.120.1"
]

[project.scripts]
adalchemy = "adalchemy.main:run"
run_crew = "adalchemy.main:run"
train = "adalchemy.main:train"
replay = "adalchemy.main:replay"
test = "adalchemy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
