[project]
name = "adalchemy_v2"
version = "0.1.0"
description = "adalchemy_v2 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
adalchemy_v2 = "adalchemy_v2.main:run"
run_crew = "adalchemy_v2.main:run"
train = "adalchemy_v2.main:train"
replay = "adalchemy_v2.main:replay"
test = "adalchemy_v2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adalchemy_v2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
